[gd_scene load_steps=10 format=3 uid="uid://be68vhiulircs"]

[ext_resource type="PackedScene" uid="uid://6eaf6tl17aio" path="res://scenes/player.tscn" id="1_o5qli"]
[ext_resource type="Script" uid="uid://jaq7puo13gso" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://hsl6f3topqru" path="res://scenes/world.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://c3bqggdkkfjdn" path="res://scenes/background.tscn" id="2_tefeu"]
[ext_resource type="Script" uid="uid://cvv8r7xpjmgp6" path="res://scripts/place_marker.gd" id="4_jyhfs"]
[ext_resource type="PackedScene" path="res://scenes/gui.tscn" id="5_tbgi4"]
[ext_resource type="AudioStream" uid="uid://d38vv6llw8rya" path="res://assets/music/Bus on Snow (loopable).mp3" id="7_o6xl0"]
[ext_resource type="AudioStream" uid="uid://gauf5ogskvu6" path="res://assets/sfx/cinderblock-across-concrete.mp3" id="7_tipki"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(64, 64)

[node name="Main" type="Node2D"]
script = ExtResource("1_sugp2")

[node name="Background" parent="." instance=ExtResource("2_tefeu")]
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="World" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(-320, -320)

[node name="PlaceMarker" type="Node2D" parent="."]
script = ExtResource("4_jyhfs")

[node name="Area2D" type="Area2D" parent="PlaceMarker"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlaceMarker/Area2D"]
shape = SubResource("RectangleShape2D_jyhfs")

[node name="Polygon2D" type="Polygon2D" parent="PlaceMarker"]
polygon = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[node name="Player" parent="." instance=ExtResource("1_o5qli")]
z_index = 2

[node name="GUI" parent="Player" instance=ExtResource("5_tbgi4")]
z_index = 9

[node name="cinderblock-across-concrete" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("7_tipki")
parameters/looping = true

[node name="Main Clock" type="Timer" parent="."]

[node name="BusOnSnow(loopable)" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("7_o6xl0")
volume_db = -10.0
autoplay = true
parameters/looping = true

[connection signal="area_entered" from="PlaceMarker/Area2D" to="PlaceMarker" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="PlaceMarker/Area2D" to="PlaceMarker" method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="PlaceMarker/Area2D" to="PlaceMarker" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="PlaceMarker/Area2D" to="PlaceMarker" method="_on_area_2d_body_exited"]
